add new settings

--- a/Code/AppConfig/App.config
+++ b/Code/AppConfig/App.config
@@ -2,6 +2,8 @@
 <configuration>
   <appSettings>
     <add key="Env" value="Dev"/>
+    <add key="DbEnv" value="Dev"/>
+    <add key="MessagingEnv" value="Dev"/>
     <add key="SQLPlatformConnection" value="SQL Connection Here"/>
     <add key="BlobContentConnection" value="Blob Storage"/>
     <add key="NoSQLWorldDataConnection" value="Mongo Connection"/>
