split some environments to allow for more flexibility

--- a/Code/AppConfig/App.config
+++ b/Code/AppConfig/App.config
@@ -1,14 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="Env" value="Dev"/>
-    <add key="DbEnv" value="Dev"/>
-    <add key="MessagingEnv" value="Dev"/>
-    <add key="SQLPlatformConnection" value="SQL Connection Here"/>
-    <add key="BlobContentConnection" value="Blob Storage"/>
-    <add key="NoSQLWorldDataConnection" value="Mongo Connection"/>
-    <add key="NoSQLGameDataConnection" value="Mongo Connection"/>
-    <add key="NoSQLPlayerDataConnection" value="Mongo Connection"/>
-    <add key="ServiceBusConnection" value="Service bus connection"/>
+    <add key="Env" value="dev"/>
+    <add key="GameDataEnv" value="dev"/>
+    <add key="PlayerDataEnv" value="dev"/>
+    <add key="WorldDataEnv" value="dev"/>
+    <add key="ContentDataEnv" value ="dev"/>
+    <add key="MessagingEnv" value="dev"/>
+    <add key="SQLPlatformConnection" value="Your SQL Connection String"/>
+    <add key="BlobContentDataConnection" value="Your Blob Connection String"/> 
+    <add key="BlobWorldDataConnection" value="Your Blob Connection String"/> 
+    <add key="NoSQLWorldDataConnection" value="Your Mongo Frontent for Cosmos Connection String"/>
+   	<add key="NoSQLGameDataConnection" value="Your Mongo Frontent for Cosmos Connection String"/>
+   	<add key="NoSQLPlayerDataConnection" value="Your Mongo Frontent for Cosmos Connection String"/>
+  	<add key="ServiceBusConnection" value="Your Service Bus Connection String"/>
+    <add key="ContentRoot" value="http://yourcontentroot.blob.core.windows.net/yourGame.Prefix"/>
   </appSettings>
 </configuration>
