add etherscan key stub

--- a/Code/AppConfig/App.config
+++ b/Code/AppConfig/App.config
@@ -15,5 +15,6 @@
    	<add key="NoSQLPlayerDataConnection" value="Your Mongo Frontent for Cosmos Connection String"/>
   	<add key="ServiceBusConnection" value="Your Service Bus Connection String"/>
     <add key="ContentRoot" value="http://yourcontentroot.blob.core.windows.net/yourGame.Prefix"/>
+    <add key="EtherscanKey" value=""/>
   </appSettings>
 </configuration>
