add some connection string placeholders

--- a/AppConfig/App.config
+++ b/AppConfig/App.config
@@ -2,20 +2,22 @@
 <configuration>
   <appSettings>
     <add key="Env" value="dev"/>
+    <add key="AccountDataEnv" value="dev"/>
     <add key="GameDataEnv" value="dev"/>
     <add key="PlayerDataEnv" value="dev"/>
     <add key="WorldDataEnv" value="dev"/>
     <add key="ContentDataEnv" value ="dev"/>
     <add key="MessagingEnv" value="dev"/>
     <add key="PublicIP" value="publicip for realtime vm"/>
-    <add key="SQLPlatformConnection" value="Your SQL Connection String"/>
     <add key="BlobContentDataConnection" value="Your Blob Connection String"/> 
-    <add key="BlobWorldDataConnection" value="Your Blob Connection String"/> 
-    <add key="NoSQLWorldDataConnection" value="Your Mongo Frontent for Cosmos Connection String"/>
-   	<add key="NoSQLGameDataConnection" value="Your Mongo Frontent for Cosmos Connection String"/>
-   	<add key="NoSQLPlayerDataConnection" value="Your Mongo Frontent for Cosmos Connection String"/>
-  	<add key="ServiceBusConnection" value="Your Service Bus Connection String"/>
-    <add key="ContentRoot" value="http://yourcontentroot.blob.core.windows.net/yourGame.Prefix"/>
+    <add key="BlobWorldDataConnection" value="Your Blob Connection String"/>
+    <add key="NoSQLAccountDataConnection" value="Your Mongo Connection String"/>
+    <add key="NoSQLGameDataConnection" value="Your Mongo Connection String"/>
+    <add key="NoSQLPlayerDataConnection" value="Your Mongo Connection String"/>
+    <add key="NoSQLWorldDataConnection" value="Your Mongo Connection String"/>
+
+    <add key="ServiceBusConnection" value="Your Service Bus Connection String"/>
+    <add key="ContentRoot" value="http://yourcontentroot.blob.core.windows.net/yourGamePrefix"/>
     <add key="EtherscanKey" value=""/>
   </appSettings>
 </configuration>
