add urls for iap validation

--- a/AppConfig/App.config
+++ b/AppConfig/App.config
@@ -24,5 +24,8 @@
     <add key="IOSSecret" value =""/>
     <add key="GooglePlaySecret" value=""/>
     <add key="PackageName" value=""/>
+    <add key="GooglePlayValidationURL" value=""/>
+    <add key="IOSBuyValidationURL" value="https://buy.itunes.apple.com/verifyReceipt"/>
+    <add key="IOSSandboxValidationURL" value="https://sandbox.itunes.apple.com/verifyReceipt"/>
   </appSettings>
 </configuration>
